# lingroove

./: .env.example  .gitignore  README.md
apps/api/: pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_add_password_hash.py  0003_add_conjugated_translation.py  0004_add_artwork_url.py  0005_add_user_avatar_url.py
apps/api/app/: main.py
apps/api/app/api/v1/routes/: analysis.py  anki.py  auth.py  lyrics.py  playlists.py  songs.py
apps/api/app/core/: config.py  security.py
apps/api/app/models/: __init__.py  models.py
apps/api/app/schemas/: schemas.py
apps/api/app/services/: analysis_payload.py  anki_exporter.py  local_user.py  lyrics_cleaner.py  lyrics_importer.py  nlp_pipeline.py  storage.py  translation_service.py
apps/api/lingroove_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/tests/: test_anki_exporter.py  test_lyrics_importer.py
apps/web/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/export/: page.tsx
apps/web/src/app/login/: page.tsx
apps/web/src/components/: AddToPlaylistMenu.tsx  ImportLyricsForm.tsx  PlaylistArtwork.tsx  TopNav.tsx  VocabGroupPanel.tsx
apps/web/src/context/: AuthContext.tsx
apps/web/src/hooks/: useRequireAuth.ts
apps/web/src/lib/: api.ts  config.ts  constants.ts
apps/web/src/types/: api.ts
docs/: LINGROOVE_PROJECT_GUIDE.md  build_pdf.py
infra/: docker-compose.development.yml  docker-compose.yml
(+6 files in other folders)
