[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lingroove-api"
version = "0.1.0"
description = "Lingroove FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.13.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "spacy>=3.7.0",
  "requests>=2.32.0",
  "beautifulsoup4>=4.12.0",
  "trafilatura>=2.0.0",
  "deep-translator>=1.11.0",
  "python-jose[cryptography]>=3.3.0",
  "bcrypt>=4.0.0",
  "email-validator>=2.0.0",
  "genanki>=0.13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
